[package]
name = "anyrun-nixos-options"
version = "0.1.0"
edition = "2021"
description = "An anyrun plugin that lets you search NixOS options."

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
ron = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
fuzzy-matcher = "0.3.7"
html-escape = "0.2.13"
regex = "1.9.1"
open = "5.0.0"
rayon = "1.7.0"
